changed numers text

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
        <label for="includeUppercase">Include Uppercase</label>
        <input type="checkbox" id="includeUppercase">
 
-       <label for="includeNumbers">Include Numbers</label>
+       <label for="includeNumbers">Add Numbers</label>
        <input type="checkbox" id="includeNumbers">
 
        <label for="includeSymbols">Include Symbols</label>
