changed symbols text

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
        <label for="includeNumbers">Add Numbers</label>
        <input type="checkbox" id="includeNumbers">
 
-       <label for="includeSymbols">Include Symbols</label>
+       <label for="includeSymbols">Add Symbols</label>
        <input type="checkbox" id="includeSymbols">
 
        <button class="btn" type="submit">Create Password</button>
