--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
        <label for="includeUppercase">Include Uppercase</label>
        <input type="checkbox" id="includeUppercase">
 
-       <label for="includeNumbers">Add Numbers</label>
+       <label for="includeNumbers">Include Numbers</label>
        <input type="checkbox" id="includeNumbers">
 
-       <label for="includeSymbols">Add Symbols</label>
+       <label for="includeSymbols">Include Symbols</label>
        <input type="checkbox" id="includeSymbols">
 
        <button class="btn" type="submit">Create Password</button>
